# geek_time_cpp

./: .clang_complete  .gitmodules  CMakeLists.txt  README.md  libcxxdetect.cmake  run_chapter.sh
01/: CMakeLists.txt  test01_stack_unwind.cpp  test02_shape_wrapper.cpp
02/: CMakeLists.txt  test01_unique_ptr.cpp  test02_shared_ptr.cpp
03/: CMakeLists.txt  test01_lifetime.cpp  test02_lifetime_extension.cpp  test03_nrvo.cpp  test04_forward.cpp
04/: CMakeLists.txt  test01_output_container.cpp  test02_vector.cpp  test03_list.cpp  test04_queue.cpp  test05_stack.cpp
05/: CMakeLists.txt  test06_hash.cpp  test07_priority_queue.cpp  test08_unordered.cpp  test09_array.cpp
09/: CMakeLists.txt  test_binary_literals.cpp  test_std_literals.cpp  test_user_literals.cpp
10/: CMakeLists.txt  test01_arma.cpp  test02_rvo_unnamed.cpp  test03_rvo_named.cpp  test04_rv_move.cpp  test05_rv_copy.cpp
11/: CMakeLists.txt  test01_utf.cpp  test02_dump_str.cpp  test03_wcout.cpp  test04_utf8_to_native.cpp  test05_icu.cpp  utf8_to_native.cpp  utf8_to_native.hpp
16/: CMakeLists.txt  test01_function_object.cpp  test02_lambda_capture.cpp  test03_generic_lambda.cpp
17/: CMakeLists.txt  test01_count_lines.cpp  test02_par_reduce.cpp  test03_y_combinator.cpp
18/: CMakeLists.txt  test01_sum.cpp  test02_compose.cpp  test03_tuple.cpp  test04_apply.cpp  test05_count_bits.cpp
19/: CMakeLists.txt  test01_thread.cpp  test02_cond_var.cpp  test03_async.cpp  test04_promise.cpp  test05_packaged_task.cpp
20/: CMakeLists.txt  singleton.cpp  singleton.h  test_singleton.cpp
21/: CMakeLists.txt  test_debug_new_include.cpp  test_debug_new_no_include.cpp
22/: CMakeLists.txt  test01_optional.cpp  test04_expected.cpp  test_expected.cpp  test_optional.cpp  test_tagged_union.cpp  test_variant.cpp
23/: CMakeLists.txt
23/armadillo/: CMakeLists.txt  arma_test.cpp
23/boost_multiprecision/: CMakeLists.txt  bm_test01_cpp_int.cpp  bm_test02_gmp_int.cpp
23/boost_multiprecision/cmake/: FindGMP.cmake
24/: CMakeLists.txt  boost_test01_typeindex.cpp  boost_test02_demangle.cpp  boost_test03_lexical_cast.cpp  boost_test04_scope_exit.cpp  boost_test05_program_options.cpp  boost_test06_hana.cpp  test01_typeindex.cpp  test03_lexical_cast.cpp  test04_scope_exit.cpp  test05_program_options.cpp
25/: CMakeLists.txt
25/boost_test/: CMakeLists.txt  bt_test01_simple.cpp  bt_test02_split.cpp  test02_split.cpp  test_main.cpp
25/catch2/: CMakeLists.txt  c2_test01_simple.cpp  c2_test02_bdd.cpp  c2_test03_split.cpp  c2_test_main.cpp  test02_bdd.cpp  test03_split.cpp
26/: CMakeLists.txt
26/easyloggingpp/: CMakeLists.txt  log.conf  test01_simple.cpp  test02_unicode.cpp  test03_conf.cpp  test04_performance_tracking.cpp  test05_crash_log.cpp
26/spdlog/: CMakeLists.txt  test01_simple.cpp  test02_multi_sink.cpp  test03_stream.cpp
27/: CMakeLists.txt  client.cpp  client_save.cpp  server.cpp  test_json.cpp
28/: CMakeLists.txt  Makefile  test01_integral_concept.cpp  test02_concepts.cpp  test03_concept_fail.cpp  test04_range_concept.cpp
29/: CMakeLists.txt  Makefile  test01_sort.cpp  test02_reverse_view.cpp  test03_filter_view.cpp  test04_filter_reverse.cpp  test05_null_sentinel.cpp  test06_squared_sum.cpp  test07_ranges_begin.cpp  test08_ranges_v3_zip_sort.cpp
30/: CMakeLists.txt
30/boost_coroutine2/: CMakeLists.txt  fibonacci_coroutine2.cpp
30/coroutines_ts/: CMakeLists.txt  fibonacci_coroutines_ts.cpp
30/cppcoro/: CMakeLists.txt  fibonacci_cppcoro_generator.cpp  fibonacci_generator_view.cpp
30/manual_iteration/: CMakeLists.txt  fibonacci.hpp  test_fibonacci.cpp
30/msvc/: CMakeLists.txt  await_msvc_future.cpp  fibonacci_msvc_generator.cpp
32/: CMakeLists.txt  test01_allocator.cpp  test02_pmr_new_delete_alloc.cpp  test03_pmr_move.cpp
33/: CMakeLists.txt  test01_puzzle.cpp  test02_volatile.cpp  test03_func_global.cpp  test04_profiler.cpp
34/: CMakeLists.txt  container_op_test.h  memory_pool.h  pooled_allocator.h  test01_normal.cpp  test02_pmr_pool.cpp  test03_class_new_delete.cpp  test04_pooled_allocator.cpp  test05_pool_decl.cpp
35/: CMakeLists.txt  memory_context.cpp  memory_context.h  test01_normal.cpp  test02_leak.cpp  test03_double_free.cpp  test04_memory_corrupt.cpp
36/: CMakeLists.txt  test01_string_view.cpp  test02_span.cpp  test03_span_perf.cpp  test04_elements_view.cpp
38/: CMakeLists.txt  test01_sum.cpp  test02_is_any_null.cpp  test03_checked_exec.cpp  test04_print.cpp
39/: CMakeLists.txt  test02_cts.cpp  test_carg.cpp  test_cts.cpp
40/: CMakeLists.txt  compile_time_string.h  metamacro.h  static_reflection.h  test_static_reflection.cpp
42/: CMakeLists.txt  test01_sort.cpp  test02_fold.cpp  test03_views_all.cpp  test04_iota.cpp  test05_take_drop.cpp  test06_split.cpp  test07_join.cpp  test08_views_bad_order.cpp
44/: CMakeLists.txt  test01_c89_posix_time.cpp  test02_cxx11_chrono.cpp  test03_cxx20_time_output.cpp  test04_cxx20_date.cpp  test05_cxx20_time_zone.cpp  test06_china_daylight_saving.cpp
45/: CMakeLists.txt  test01_basic_format.cpp  test02_chrono_format.cpp  test03_ranges_format.cpp  test04_custom_formatter.cpp  test05_print.cpp  test06_print_utf8.cpp  test07_format_locale.cpp
46/: CMakeLists.txt
46/consteval/: CMakeLists.txt  test_consteval.cpp
46/constinit/: CMakeLists.txt  main.cpp  primes.cpp  primes.h
46/jthread/: CMakeLists.txt  test_jthread.cpp
46/spaceship_op/: CMakeLists.txt  employee.h  main.cpp
47/: CMakeLists.txt  test01_bit_cast.cpp  test02_bad_cast.cpp  test03_mozi_serialization.cpp
48/: CMakeLists.txt  test01_simplify_optional.cpp  test02_simplify_container.cpp  test03_recursive_lambda.cpp  test04_const_view.cpp  test05_std_expected.cpp  test06_mdspan.cpp
common/: finally.h  output_container.h  output_range.h  profiler.cpp  profiler.h  rdtsc.h  scoped_thread.h  shape.h  smart_ptr.h
