cmake_minimum_required(VERSION 3.10)
project(geek_time_cpp)

#find_package(cpprestsdk)

add_subdirectory(01)
add_subdirectory(02)
add_subdirectory(03)
add_subdirectory(04)
add_subdirectory(05)
add_subdirectory(09)
add_subdirectory(10)
add_subdirectory(11)
add_subdirectory(16)
add_subdirectory(17)
add_subdirectory(18)
add_subdirectory(19)
add_subdirectory(20)
add_subdirectory(21)
add_subdirectory(22)
add_subdirectory(23)
add_subdirectory(24)
add_subdirectory(25)
add_subdirectory(26)

#if(cpprestsdk_FOUND)
#  add_subdirectory(27)
#endif()

if(CMAKE_CXX_COMPILER_ID MATCHES GNU)
  add_subdirectory(28)
  add_subdirectory(29)
elseif(CMAKE_CXX_COMPILER_ID MATCHES Clang AND
    CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 16.0)
  add_subdirectory(28)
  add_subdirectory(29)
elseif((CMAKE_CXX_COMPILER_ID STREQUAL Clang AND
        CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 10.0) OR
       (CMAKE_CXX_COMPILER_ID STREQUAL AppleClang AND
        CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 12.0))
  add_subdirectory(28)
elseif(MSVC)
  add_subdirectory(28)
  add_subdirectory(29)
endif()

add_subdirectory(30)
add_subdirectory(32)
add_subdirectory(33)
add_subdirectory(34)
add_subdirectory(35)
add_subdirectory(36)
add_subdirectory(38)
add_subdirectory(39)
add_subdirectory(40)
add_subdirectory(42)
add_subdirectory(44)
add_subdirectory(45)
